fix: line break in code

--- a/static/css/content.css
+++ b/static/css/content.css
@@ -68,6 +68,9 @@ kbd,
 samp {
     border: var(--color-code-inline-border) 0.1rem solid;
     padding: 0 0.4rem 0 0.4rem;
+    max-width: 100%;
+    overflow: scroll;
+    display: inline-block;
 }
 
 iframe,
