--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -4,6 +4,7 @@ body {
     cursor: default;
     padding: 3rem;
     padding-top: 0.7rem;
+    max-width: 100%;
 }
 
 main {
